2003-11-04  Jim Meyering  <jim@meyering.net>

	* modules/sysexits: Use the `$(VAR)' notation for AC_SUBST'd
	variable names, rather than @VAR@.
	* modules/poll: Likewise.

2003-11-03  Jim Meyering  <jim@meyering.net>

	* modules/userspec (lib_SOURCES): Add userspec.h.
	(Include): Add "userspec.h".
	Improve description.

2003-10-29  Paul Eggert  <eggert@twinsun.com>

	* modules/group-member: Depend on stdbool.

2003-10-20  Bruno Haible  <bruno@clisp.org>

	* modules/wait-process: New file.
	* MODULES.html.sh (func_all_modules): Add wait-process.

2003-10-16  Paul Eggert  <eggert@twinsun.com>

	* README: Mention that gnulib assumes that (foo *) NULL + 0 == NULL.

2003-10-14  Bruno Haible  <bruno@clisp.org>

	* modules/fatal-signal: Add m4/sig_atomic_t.m4 to file list.

2003-10-12  Paul Eggert  <eggert@twinsun.com>

	* modules/xalloc: Do not depend on 'exit'.  Depend on 'stdbool'.
	Change maintainer from Bruno Haible to 'all'.

2003-10-10  Simon Josefsson  <jas@extundo.com>

	* modules/argp (Depends-on): Add restrict and strcase.

2003-10-08  Paul Eggert  <eggert@twinsun.com>

	* modules/getpass: Depend on stdbool.

2003-10-06  Bruno Haible  <bruno@clisp.org>

	* modules/version-etc-2: Remove file.
	* MODULES.html.sh (func_all_modules): Remove version-etc-2.

2003-10-06  Bruno Haible  <bruno@clisp.org>

	* modules/fatal-signal: New file.
	* MODULES.html.sh (func_all_modules): Add fatal-signal.

2003-10-05  Paul Eggert  <eggert@twinsun.com>

	* README: Rework advice for preventing empty .o files.
	Don't recommend ELIDE constructs.  Recommend <stddef.h>,
	not <sys/types.h>.

2003-10-02  Bruno Haible  <bruno@clisp.org>

	* modules/lchown (Include): Add lchown.h.
	* modules/time_r (Include): Use "..." syntax.
	* modules/xgetdomainname (Include): Add xgetdomainname.h.

2003-10-01  Simon Josefsson  <jas@extundo.com>

	* MODULES.html.sh (func_all_modules): Move gethostname from section
	'based on' to section 'lacking' POSIX:2001.
