@@ -1,3 +1,7 @@
+2003-11-04  Bruno Haible  <bruno@clisp.org>
+
+	* xsize.m4: New file.
+
 2003-11-03  Bruno Haible  <bruno@clisp.org>
 
 	* wait-process.m4 (gl_WAIT_PROCESS): Also check for waitid.
