@@ -1,3 +1,9 @@
+2003-11-04  Bruno Haible  <bruno@clisp.org>
+
+	* modules/xsize: New file.
+	* modules/linebreak: Depend on xsize.
+	* MODULES.html.sh (func_all_modules): Add xsize.
+
 2003-11-04  Jim Meyering  <jim@meyering.net>
 
 	* modules/sysexits: Use the `$(VAR)' notation for AC_SUBST'd
